# generic_pipeline

./: .gitignore  QUICKSTART.md  README.md  WEAVIATE_INSTRUCTIONS.md  add_data_to_bq.ipynb  attribute_classification_checkpoint.json  bq_cleanup.ipynb  classification_analysis.json  docker-compose.yml  prepared_input.csv  pyproject.toml  requirements.txt  run_pinecone_test.sh  run_weaviate_test.sh  test_pinecone_attributes.sh  tradyon_classify_attributes.py  tradyon_classify_attributes_pinecone.py  tradyon_classify_attributes_weaviate.py  tradyon_classify_products.py  tradyon_classify_products_pinecone.py  tradyon_classify_products_weaviate.py  tradyon_generate_schema.py  tradyon_load.py  tradyon_post_process.py  upload_product_schema.py  weaviate_attribute_checkpoint.json  weaviate_attribute_classification_analysis.json
config/: attribute_definitions.json  attribute_definitions_example.json  product_attributes_schema.json  product_attributes_schema_example.json  products_definition.json  products_definition_example.json
config/rice/: attribute_definitions.json  product_attributes_schema.json  products_definition.json
scripts/: analyze_attribute_performance.py  analyze_classification_performance.py  cleanup_weaviate.py  hs_code.csv  populate_pinecone_attributes.py  populate_pinecone_index.py  populate_weaviate_attributes.py  populate_weaviate_products.py  prepare_test_data.py  run_pinecone_classification_example.sh
src/classifiers/: pinecone_attribute_classifier.py  (+4 more)
tmp_schema/: attribute_definitions.json  product_attributes_schema.json  products_definition.json
(+11 files in other folders)
