[project]
name = "generic-pipeline"
version = "0.1.0"
description = "LLM-driven product and attribute classification pipeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "google-generativeai",
    "openai",
    "pydantic",
    "tqdm",
    "python-dotenv",
]

[tool.uv]
package = false
